<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginFragment"
    android:background="@color/white">

    <!--logo-->
    <ImageView
        android:id="@+id/app_logo"
        android:contentDescription="@string/logo_description"
        android:layout_width="@dimen/logo_width"
        android:layout_height="@dimen/logo_height"
        android:background="@drawable/app_logo"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/logo_margin_top"/>

    <!--input fields-->
    <LinearLayout
        android:id="@+id/usernameBound"
        android:layout_width="@dimen/input_width"
        android:layout_height="@dimen/input_height"
        android:layout_below="@id/app_logo"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/input_margin_top"
        android:orientation="horizontal"
        android:background="@drawable/border_input_bottom">

        <ImageView
            android:contentDescription="@string/username_icon_description"
            android:layout_width="@dimen/mini_icon_dimension"
            android:layout_height="@dimen/mini_icon_dimension"
            android:background="@drawable/username"
            android:layout_gravity="center_vertical"/>
        <EditText
            android:id="@+id/username"
            android:layout_marginLeft="@dimen/margin_default"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/username_hint"
            android:background="@null"
            android:textColor="@color/black"
            android:textColorHint="@color/hintColor"
            android:fontFamily="@font/montserrat"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/passwordBound"
        android:layout_width="@dimen/input_width"
        android:layout_height="@dimen/input_height"
        android:layout_below="@id/usernameBound"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/input_margin_top"
        android:orientation="horizontal"
        android:background="@drawable/border_input_bottom">

        <ImageView
            android:contentDescription="@string/password_icon_description"
            android:layout_width="@dimen/mini_icon_dimension"
            android:layout_height="@dimen/mini_icon_dimension"
            android:background="@drawable/password"
            android:layout_gravity="center_vertical"/>
        <EditText
            android:id="@+id/password"
            android:layout_marginLeft="@dimen/margin_default"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:textColor="@color/black"
            android:textColorHint="@color/hintColor"
            android:fontFamily="@font/montserrat"
            android:hint="@string/password_hint"
            android:inputType="textPassword"/>
    </LinearLayout>

    <!--buttons-->
    <Button
        android:id="@+id/loginBtn"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_below="@id/passwordBound"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/button_margin_top"
        android:background="@drawable/button_primary_background"
        android:text="@string/login"
        android:fontFamily="@font/montserrat"
        android:textStyle="bold"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_below="@id/loginBtn"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/button_margin_top"
        android:text="@string/registry"
        android:fontFamily="@font/montserrat"
        android:textAllCaps="false"
        android:textColor="@color/colorMAIN"
        android:background="@drawable/button_secondary_background"
        />
</RelativeLayout>